--- a/genindex.html
+++ b/genindex.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; transcriptic 2.0.4 documentation</title>
+    <title>Index &mdash; transcriptic 2.0.5 documentation</title>
     
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2.0.4',
+        VERSION:     '2.0.5',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="transcriptic 2.0.4 documentation" href="index.html" />
+    <link rel="top" title="transcriptic 2.0.5 documentation" href="index.html" />
    
   
   <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9" />
@@ -42,8 +42,7 @@
    <p>Index pages by letter:</p>
 
    <div class="genindex-jumpbox">
-   <p><a href="genindex-_.html"><strong>_</strong></a>
-     | <a href="genindex-A.html"><strong>A</strong></a>
+   <p><a href="genindex-A.html"><strong>A</strong></a>
      | <a href="genindex-B.html"><strong>B</strong></a>
      | <a href="genindex-C.html"><strong>C</strong></a>
      | <a href="genindex-D.html"><strong>D</strong></a>
@@ -52,15 +51,12 @@
      | <a href="genindex-H.html"><strong>H</strong></a>
      | <a href="genindex-I.html"><strong>I</strong></a>
      | <a href="genindex-L.html"><strong>L</strong></a>
-     | <a href="genindex-M.html"><strong>M</strong></a>
      | <a href="genindex-N.html"><strong>N</strong></a>
-     | <a href="genindex-O.html"><strong>O</strong></a>
      | <a href="genindex-P.html"><strong>P</strong></a>
      | <a href="genindex-R.html"><strong>R</strong></a>
      | <a href="genindex-S.html"><strong>S</strong></a>
      | <a href="genindex-T.html"><strong>T</strong></a>
      | <a href="genindex-U.html"><strong>U</strong></a>
-     | <a href="genindex-W.html"><strong>W</strong></a>
      </p>
 
    <p><a href="genindex-all.html"><strong>Full index on one page</strong>
